* 2017.10.03 - added support to customize detect soft via --env.XYZ=abc
             - added support to set version_from and version_to in deps
               and in ck detect soft, for example
               $ ck detect soft --tags=boost --version_from=1.62.0 --version_to=1.65.0

* 2017.10.01 - minimized questions when installing packages

* 2017.09.29 - added support for package channels and comments

               When package channel is specified via "ck set kernel var.package_channel={stable}",
               "channel-stable" will be added to all package tags during installation thus stabilizing package

               Moving back to development version is by "ck set kernel var.package_channel="

             -  If package meta has key "comment", it will be printed in a package selector

* 2017.09.28 - added support to run Python scripts from CK entries

* 2017.09.21 - added support to cache and reuse dependencies by tags (for automating crowdbenchmarking)
             - reverted update of symlinks in soft

* 2017.09.19 - minor output improvement

* 2017.09.03 - added "ck virtual env" to pre-set environment in a given/new shell for debugging

* 2017.06.06 - added flag --full_path to specify path to the installed soft during "ck detect soft"

* 2017.05.25 - added flag --soft_name to specify non-standard tool name to search

* 2017.05.22 - added --search_dirs in ck detect soft to specify extra dirs where to search soft during auto-detection
             - improving GCC detection on non-standard platforms (useful for Caffe* installations)

* 2017.05.15 - improving detection of different versions of python and pip (useful for TensorFlow)
             - added --extra_tags to install package

* 2017.05.10 - added protobuf 3.2 & 3.3 for Linux, Windows and Android (needed for Caffe2)

* 2017.05.08 - added ARM compute lib description
             - passing updated env to all package/soft customization scripts
