@@ -1,20 +1,20 @@
 {
-  "backup_data_uid": "9b9b3208ac44b891",
-  "backup_module_uid": "032630d041b4fd8a",
-  "backup_module_uoa": "module",
+  "backup_data_uid": "9b9b3208ac44b891", 
+  "backup_module_uid": "032630d041b4fd8a", 
+  "backup_module_uoa": "module", 
   "control": {
-    "author": "Grigori Fursin",
-    "author_email": "Grigori.Fursin@cTuning.org",
-    "author_webpage": "http://fursin.net",
-    "copyright": "See CK COPYRIGHT.txt for copyright details",
-    "engine": "CK",
-    "iso_datetime": "2015-02-24T19:40:04.222000",
-    "license": "See CK LICENSE.txt for licensing details",
+    "author": "Grigori Fursin", 
+    "author_email": "Grigori.Fursin@cTuning.org", 
+    "author_webpage": "http://fursin.net", 
+    "copyright": "See CK COPYRIGHT.txt for copyright details", 
+    "engine": "CK", 
+    "iso_datetime": "2015-02-24T19:40:04.222000", 
+    "license": "See CK LICENSE.txt for licensing details", 
     "version": [
-      "1",
-      "1",
+      "1", 
+      "1", 
       "0205"
     ]
-  },
+  }, 
   "data_name": "env"
 }
