@@ -2,43 +2,46 @@
   "actions": {
     "clean": {
       "desc": "remote env entry and installed package"
-    },
+    }, 
+    "get_all_versions_in_deps": {
+      "desc": "get all versions from deps (recursively)"
+    }, 
     "prune_search_list": {
       "desc": "prune search list by no_tags"
-    },
+    }, 
     "refresh": {
       "desc": "refresh environment setup (re-setup related software version)"
-    },
+    }, 
     "resolve": {
       "desc": "resolve all dependencies for a given software"
-    },
+    }, 
     "rmtmp": {
       "desc": "remove tmp entries (when installation to env entry failed)"
-    },
+    }, 
     "set": {
       "desc": "prepare and set environment for a given software"
-    },
+    }, 
     "show": {
       "desc": "show all installed software environments"
-    },
+    }, 
     "virtual": {
       "desc": "pre-load environment for the shell"
-    },
+    }, 
     "xset": {
       "desc": "set env for command line (pre-set various flags)"
     }
-  },
-  "copyright": "See CK COPYRIGHT.txt for copyright details",
-  "custom_script_name": "customize",
-  "desc": "software environments (to abstract multiple tools and their versions)",
-  "developer": "Grigori Fursin",
-  "developer_email": "Grigori.Fursin@cTuning.org",
-  "developer_webpage": "http://fursin.net",
-  "license": "See CK LICENSE.txt for licensing details",
+  }, 
+  "copyright": "See CK COPYRIGHT.txt for copyright details", 
+  "custom_script_name": "customize", 
+  "desc": "software environments (to abstract multiple tools and their versions)", 
+  "developer": "Grigori Fursin", 
+  "developer_email": "Grigori.Fursin@cTuning.org", 
+  "developer_webpage": "http://fursin.net", 
+  "license": "See CK LICENSE.txt for licensing details", 
   "module_deps": {
-    "os": "0440cb72c2bc5cc6",
-    "package": "1dc07ee0f4742028",
-    "platform.os": "41e31cc4496b8a8e",
+    "os": "0440cb72c2bc5cc6", 
+    "package": "1dc07ee0f4742028", 
+    "platform.os": "41e31cc4496b8a8e", 
     "soft": "5e1100048ab875d7"
   }
 }
