@@ -2,6 +2,8 @@
              - added support to set version_from and version_to in deps
                and in ck detect soft, for example
                $ ck detect soft --tags=boost --version_from=1.62.0 --version_to=1.65.0
+             - added "get_all_versions_in_deps" function to module:env
+               to list recursively all versions of SW deps 
 
 * 2017.10.01 - minimized questions when installing packages
 
